--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ server.port= 5000
 spring.datasource.url= jdbc:mysql://192.168.43.154:3306/polling_app?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=freeman
 spring.datasource.password=Miracle123ogbiyoyo
+debug=true
 
 ## Hibernate Properties
 
@@ -22,3 +23,6 @@ spring.datasource.initialization-mode=always
 ## Jackson Properties
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
 spring.jackson.time-zone= UTC
+
+app.jwtSecret= JWTSuperSecretKey
+app.jwtExpirationInMs = 604800000
